[gd_scene load_steps=6 format=3 uid="uid://ogg3oaxoy66n"]

[ext_resource type="Script" path="res://scripts/base/slingshot.gd" id="1_l84lg"]
[ext_resource type="Texture2D" uid="uid://cp4hux5qu7uuy" path="res://sprites/slingshot3.png" id="2_qqmov"]
[ext_resource type="Script" path="res://scripts/visualizers/trajectory_predictor.gd" id="3_ekkhv"]
[ext_resource type="Texture2D" uid="uid://b7epak382jhhc" path="res://sprites/ui/bottom2.png" id="3_k85xf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0jt4s"]
radius = 58.0345

[node name="Slingshot" type="Node2D"]
script = ExtResource("1_l84lg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.176251, 0.18427)
texture = ExtResource("2_qqmov")

[node name="BottomUI" type="Sprite2D" parent="."]
position = Vector2(-100, -21)
scale = Vector2(0.34188, 0.47)
texture = ExtResource("3_k85xf")
centered = false

[node name="LeftLine" type="Line2D" parent="."]
position = Vector2(0, 13)
points = PackedVector2Array(0, -44, -20, -44)
width = 4.0
default_color = Color(0.235294, 0.956863, 0.992157, 0.466667)

[node name="RightLine" type="Line2D" parent="."]
position = Vector2(0, 13)
points = PackedVector2Array(0, -44, 20, -44)
width = 4.0
default_color = Color(0.235294, 0.956863, 0.992157, 0.466667)

[node name="TouchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
shape = SubResource("CircleShape2D_0jt4s")

[node name="SlingshotCenter" type="Marker2D" parent="."]
position = Vector2(0, -31)

[node name="TrajectoryPredictor" type="Node2D" parent="."]
script = ExtResource("3_ekkhv")

[connection signal="input_event" from="TouchArea" to="." method="_on_touch_area_input_event"]
